<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrol"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginTop="30dp"
        android:transitionName="example_transition"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        >

        <Spinner
            android:spinnerMode="dropdown"
            android:id="@+id/Driver_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
             />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout7"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameArabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Delivery_date"
            android:inputType="textPersonName"
            android:clickable="true"
            android:focusable="false"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Shipping_cost"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:hint="@string/purchase_date"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:focusable="false"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/customer_code"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout3"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/aftersale_invoice"

            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/shot"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshap"
        android:layout_margin="10dp"
        android:text="@string/shot"
        android:textColor="@color/white"
        android:elevation="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout4" />

    <Button
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshap"
        android:elevation="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout4"
         />

    <Button
        android:id="@+id/pick"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttonshap"
        android:elevation="10dp"
        android:text="@string/pick"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shot" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>